--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,6 @@
 /*This is the styling for the basic pages*/
 #main-content {
-/*	background-image: url('../images/nightlife4.png');
-	background-repeat: no-repeat;*/
-/*	height: 350px;
-	color: #efeaee; */
-}
+Ï
 
 body {
 	height: 830px;
